--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 *{
     margin: 0;
     padding: 0;
-     background-color: #0f0b0b;
+    background-color: #0f0b0b;
+    color: white;
 }
 
 .navbar{
-   
-    color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 3vh;
 }
 .navbar ul {
     list-style-type: none; 
@@ -19,7 +19,30 @@
     gap: 20px; 
 }
 
+
 .navbar li a {
+    position: relative;
     text-decoration: none;
-    color: inherit; 
+    color: inherit;
+    font-weight: 500;
+}
+
+.navbar li a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px; /* sits just under the text */
+    width: 0%;
+    height: 2px;
+    background-color: white;
+    transition: width 0.3s ease-in-out;
+}
+
+.navbar li a:hover::after {
+    width: 100%;
+}
+
+.hero{
+    text-align: center;
+    padding-top: 8vh;
 }
