--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;400;500&display=swap');
 *{
     margin: 0;
     padding: 0;
     background-color: #0f0b0b;
     color: white;
 }
+.body{
+    font-family: 'Poppins', sans-serif;
+}
 
+h1, h2, .navbar h1 {
+  font-family: 'Playfair Display', serif;
+}
+.navbar h1{
+    font-size: 4vh;
+}
 .navbar{
     display: flex;
     align-items: center;
@@ -16,7 +26,7 @@
     padding: 0;
     margin: 0;
     display: flex;
-    gap: 20px; 
+    gap: 7vh; 
 }
 
 
@@ -25,6 +35,7 @@
     text-decoration: none;
     color: inherit;
     font-weight: 500;
+    font-size: 3vh;
 }
 
 .navbar li a::after {
@@ -43,6 +54,13 @@
 }
 
 .hero{
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    padding-top: 8vh;
+    padding-top: 20vh;
+}
+.hero h1{
+    font-size: 9vh;
 }
